# geothermal-simulation

./: .gitignore  CLAUDE.md  Makefile  README.md  codex-critique.md  docker-compose.yml  mkdocs.yml
backend/: README.md  pyproject.toml
backend/geosim/: __init__.py  compute.py
backend/geosim/api/: __init__.py  app.py  features.py  frame_io.py  fusion.py  geomodel.py  inversion.py  planning.py  property_models.py  schemas.py
backend/geosim/catalog/: __init__.py  db.py  ids.py  models.py  spatial.py
backend/geosim/catalog/migrations/: alembic.ini  env.py
backend/geosim/fusion/: __init__.py  analysis.py  calibration.py  favorability.py  grid.py  resample.py  transform.py
backend/geosim/fusion/rockphys/: __init__.py  alteration.py  fluid.py  fracture.py  permeability.py  porosity.py  temperature.py
backend/geosim/geomodel/: __init__.py  builder.py  writer.py
backend/geosim/ingestion/: __init__.py  base.py  gridding.py  normalize.py  pipeline.py  registry.py  seed.py  writer.py
backend/geosim/ingestion/adapters/: __init__.py  _stg.py  em.py  ert.py  gravity.py  gravity_csv.py  insar.py  ip.py  magnetics.py  microseismic.py  mt.py  seismic.py  welllog.py
backend/geosim/inversion/: __init__.py  cooperative.py  domain.py  engine.py  harness.py  mock.py
backend/geosim/inversion/engines/: __init__.py  ert_pygimli.py  gravity_simpeg.py  mt_nsem.py  tem1d.py
backend/geosim/jobs/: __init__.py  runner.py
backend/geosim/planning/: __init__.py  _sampling.py  drillability.py  predict.py  targets.py  trajectory.py
backend/geosim/planning/export/: __init__.py  csv_export.py  units.py  witsml.py
backend/geosim/plugins/: __init__.py  contracts.py  manifest.py  methods.py  register.py  registry.py
backend/geosim/spatial/: __init__.py  frame.py  property_types.py  units.py  vertical.py
backend/geosim/storage/: __init__.py  gltf.py  layout.py  property_model.py  pyramid.py  raw_store.py
backend/geosim/synthgen/: __init__.py  __main__.py  compiler.py  resistivity.py  rockphysics.py  scene.py  truth.py
backend/scripts/: dev_server.py
backend/tests/: conftest.py  test_adapters_electrical.py  test_adapters_potential.py  test_adapters_seismic.py  test_api.py  test_calibration.py  test_catalog.py  test_compute.py  test_favorability.py  test_features_serving.py  test_fusion_analysis.py  test_fusion_core.py  test_geomodel.py  test_gravity_real.py  test_gridding.py  test_ingestion_pipeline.py  test_inversion_cooperative.py  test_inversion_engine.py  test_inversion_ert.py  test_inversion_gravity.py  test_jobs.py  test_m0_exit.py  test_m1_exit.py  test_m1_ingest.py  test_m1_serving.py  test_m2_exit.py  test_m3_exit.py  test_m4_exit.py  test_m5_exit.py  test_m6_exit.py  test_m7_exit.py  test_m8_exit.py  test_m9_exit.py  test_mt_nsem.py  test_planning.py  test_planning_export.py  test_plugins.py  test_real_em.py  test_real_forge_load.py  test_real_insar.py  (+13 more)
(+150 files in other folders)
