[project]
name = "geosim"
version = "0.0.1"
description = "Geothermal Underground Simulator — backend (FastAPI + geoscience stack)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # spatial framework (doc 01)
    "pyproj>=3.6",
    "pint>=0.23",
    "numpy>=1.26",
    # data model / storage (doc 02, 04)
    "xarray>=2024.1",
    "zarr>=3.0",
    "python-ulid>=2.2",
    # api / serving (doc 04)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    # catalog DB (doc 04) — Postgres primary, SQLite fallback
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # jobs (doc 04)
    "rq>=1.16",
    "redis>=5.0",
]

[project.optional-dependencies]
# Heavy / conflicting geoscience deps are opt-in (doc 08 executionMode rationale).
ingest = [
    "segyio>=1.9",
    "lasio>=0.31",
    "rasterio>=1.3",
    "obspy>=1.4",
    "pandas>=2.2",
    "geopandas>=0.14",
]
fusion = [
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "verde>=1.8",
]
postgres = [
    "psycopg[binary]>=3.1",
]
forward-t1 = [
    # rigorous (T1) synthetic forward solvers (doc 05 §6, M3)
    "harmonica>=0.7",      # gravity/magnetics Newtonian forward
    "empymod>=2.3",        # 1D EM/MT forward
    "pykonal>=0.4",        # eikonal seismic refraction traveltimes
    "h5py>=3.10",          # pykonal dependency
]
geomodel = [
    # implicit geological modelling (doc 07/OVERVIEW §6 L4, M8)
    "gempy>=2024.1",
]
inversion = [
    # installed in a separate worker/container venv in practice (doc 08/10, M9)
    "simpeg>=0.22",
    "pygimli>=1.5",
]
gpu = [
    # GPU acceleration (CUDA 12). Install on a host with an NVIDIA GPU (e.g. RTX 4090) +
    # the NVIDIA Container Toolkit: `uv pip install -e ".[gpu]"`. The geosim.compute
    # backend auto-detects CuPy and falls back to NumPy when absent, so this is optional.
    "cupy-cuda12x>=13",   # drop-in NumPy on the GPU (dense potential-field sensitivity)
    "torch>=2.2",         # batched 1-D forwards + tensor ops on the GPU
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]
docs = [
    # browsable documentation site (mkdocs serve / build)
    "mkdocs-material>=9.5",
]

[project.entry-points."geosim.plugins"]
# Third-party method bundles advertise themselves here (doc 08 §3.1).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geosim"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# str-mixin enums (class X(str, Enum)) are intentional for clean JSON/SQL serialization;
# the StrEnum auto-fix changes str() semantics, so we keep the mixin pattern.
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
